mengubah header dan mengubah footer

--- a/home.html
+++ b/home.html
@@ -1,3 +1,28 @@
+<!-- =====================================================================================================
+========================== Halooo !!! ngintip aja nih ============================================
+==========================================================================================================
+
+NYARI APA NIH? HEHE... I CAN SEE YOU
+SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIAT INI !
+
+                                                                                          
+     :::       .:.                                   ::          .:.                  .&@~          
+    .@@@#      P@#                                  ^@@:         B@Y                  .@@!          
+    .@@#@#     P@#     ..^~~~^.          .:~~~~~:   .@@^         &@7      .~~~:       .@@~  :~~:    
+    .@@^5@#    P@#    !@&BGGB&@&!      !#@#GGGB#J    &@7   ..    @@^   .5@&BGB&@B^    .@@JP@&&&@@P  
+    .@@^ G@B   P@#     .      ?@@^    ~@@~           #@Y  :@@?  .@@.  :@@7     !@@~   .@@@B^   :@@G 
+    .@@^  B@G  P@#       :^~~^7@@!    .&@&Y~.        G@P  #@@@: :@@   #@&^^~~~^^&@#   .@@J      7@@:
+    .@@^   #@P 5@#    7#@&BBBB#@@!      ~5#&@@&P^    J@B J@7~@# ^@#   @@&GBBBBBBGBY   .@@~      ^@@^
+    .@@^    #@JP@#   ?@@!     .@@!          .^P@@7   !@&:@#  G@Y!@G   #@#             .@@~      Y@&.
+    .@@^     &@@@#   J@@~   .?&@@!    ..      !@@!   :@@&@.   &@&@5   :@@B^     ..    .@@?    .Y@@^ 
+    .&&^     .#@&G    ?&@&###P^B@^    J@&&###&&P^    .&&@7    ^&@@!     J#&&&###&B     G&&&&#&&#?   
+                         ...            .....                              ....           ....      
+
+==========================================================================================================
+==========================================================================================================
+=======================================================================================================-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -89,27 +114,27 @@
 
             <section class="swiper-slide slide" style="background: url(images/aku3.jpg) no-repeat;">
                <div class="content">
-                  <h3>kursus terbaik yang akan Anda temukan di sini!</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
-                     quidem corrupti?</p>
+                  <h3>Blog terbaik yang akan Anda temukan di sini!</h3>
+                  <p>Mari berlajar di website NasWeb, gratiss tanpa di pungut biaya, dengan penjelasan yang mudah
+                     dipahami</p>
                   <a href="#" class="btn">get started</a>
                </div>
             </section>
 
             <section class="swiper-slide slide" style="background: url(images/aku2.jpg) no-repeat;">
                <div class="content">
-                  <h3>the best courses you will find find here!</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
-                     quidem corrupti?</p>
+                  <h3>Blog terbaik yang akan Anda temukan di sini!</h3>
+                  <p>Mari berlajar di website NasWeb, gratiss tanpa di pungut biaya, dengan penjelasan yang mudah
+                     dipahami</p>
                   <a href="#" class="btn">get started</a>
                </div>
             </section>
 
             <section class="swiper-slide slide" style="background: url(images/aku1.jpg) no-repeat;">
                <div class="content">
-                  <h3>the best courses you will find find here!</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
-                     quidem corrupti?</p>
+                  <h3>Blog terbaik yang akan Anda temukan di sini!</h3>
+                  <p>Mari berlajar di website NasWeb, gratiss tanpa di pungut biaya, dengan penjelasan yang mudah
+                     dipahami</p>
                   <a href="#" class="btn">get started</a>
                </div>
             </section>
@@ -276,9 +301,7 @@
          <div class="swiper-wrapper">
 
             <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
+               <p>interfacenya bagus banget</p>
                <img src="images/katamereka5.jpg" alt="">
                <h3>Ir.H.Ferdinand Valentino rosi</h3>
                <div class="stars">
@@ -291,9 +314,7 @@
             </div>
 
             <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
+               <p>materinya keren banget kak, saya suka banget dengan materinya</p>
                <img src="images/katamereka4.jpg" alt="">
                <h3>Ir.H.sahrull</h3>
                <div class="stars">
@@ -306,9 +327,8 @@
             </div>
 
             <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
+               <p>Thanks untuk NaasWeb yang sudah membagikan ilmunya, semua videonya gampang di mengerti, Untuk
+                  Sekolah koding Keren dan Mantap</p>
                <img src="images/kattameraka2.jpg" alt="">
                <h3>Dr.Dr.Ir.Mora Devent M.Pd</h3>
                <div class="stars">
@@ -321,9 +341,8 @@
             </div>
 
             <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
+               <p>Terimakasih NasWeb sudah berbagi ilmu dan mengajarkan ttg dunia teknologi semoga kedepannya
+                  makin lebih baik 💪</p>
                <img src="images/katameraka1.jpg" alt="">
                <h3>Ir.Indra gandhi</h3>
                <div class="stars">
@@ -336,9 +355,7 @@
             </div>
 
             <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
+               <p>Terimakasih banget sama NasWeb atas ilmu yang sangat bermanfaat!</p>
                <img src="images/katatmeraka3.jpg" alt="">
                <h3>Ir.H.Brian putra</h3>
                <div class="stars">
@@ -351,9 +368,8 @@
             </div>
 
             <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
+               <p>Yang dulunya belajar di google masih minim tutorial versi bahasa, dengan lahirnya NasWeb semua
+                  masalah yang saya alami sudah teratasi dan di setiap video penjelasannya juga mudah dimengerti. :v</p>
                <img src="images/katamereka6.jpg" alt="">
                <h3>Ir.Sultan.Hendri</h3>
                <div class="stars">
@@ -425,7 +441,10 @@
 
       </div>
 
-      <div class="credit"> created by <span>Ignasius</span> | all rights reserved! </div>
+      <div class="credit"> di buat dengan <i class="fas fa-heart" style="color: red;"></i> oleh <span>Ignasius</span>
+         <br>
+         &copy; NasWeb 2022
+      </div>
 
    </section>
 
