--- a/public/blog.html
+++ b/public/blog.html
@@ -1,3 +1,28 @@
+<!-- =====================================================================================================
+========================== Halooo !!! ngintip aja nih ============================================
+==========================================================================================================
+
+NYARI APA NIH? HEHE... I CAN SEE YOU
+SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIAT INI !
+
+                                                                                            
+     :::       .:.                                   ::          .:.                  .&@~          
+    .@@@#      P@#                                  ^@@:         B@Y                  .@@!          
+    .@@#@#     P@#     ..^~~~^.          .:~~~~~:   .@@^         &@7      .~~~:       .@@~  :~~:    
+    .@@^5@#    P@#    !@&BGGB&@&!      !#@#GGGB#J    &@7   ..    @@^   .5@&BGB&@B^    .@@JP@&&&@@P  
+    .@@^ G@B   P@#     .      ?@@^    ~@@~           #@Y  :@@?  .@@.  :@@7     !@@~   .@@@B^   :@@G 
+    .@@^  B@G  P@#       :^~~^7@@!    .&@&Y~.        G@P  #@@@: :@@   #@&^^~~~^^&@#   .@@J      7@@:
+    .@@^   #@P 5@#    7#@&BBBB#@@!      ~5#&@@&P^    J@B J@7~@# ^@#   @@&GBBBBBBGBY   .@@~      ^@@^
+    .@@^    #@JP@#   ?@@!     .@@!          .^P@@7   !@&:@#  G@Y!@G   #@#             .@@~      Y@&.
+    .@@^     &@@@#   J@@~   .?&@@!    ..      !@@!   :@@&@.   &@&@5   :@@B^     ..    .@@?    .Y@@^ 
+    .&&^     .#@&G    ?&@&###P^B@^    J@&&###&&P^    .&&@7    ^&@@!     J#&&&###&B     G&&&&#&&#?   
+                         ...            .....                              ....           ....      
+
+==========================================================================================================
+==========================================================================================================
+=======================================================================================================-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -80,13 +105,13 @@
    <!-- header section ends -->
 
    <section class="heading-link">
-      <h3>our courses</h3>
-      <p> <a href="../home.html">home</a> / courses </p>
+      <h3>our Blog</h3>
+      <p> <a href="../home.html">home</a> / Blog </p>
    </section>
 
    <section class="courses">
 
-      <h1 class="heading"> our famous courses </h1>
+      <h1 class="heading"> Blog</h1>
 
       <div class="box-container">
 
@@ -100,6 +125,24 @@
                <p>Packet Tracer adalah simulator alat-alat jaringan Cisco yang sering digunakan sebagai media
                   pembelajaran dan pelatihan, dan juga dalam bidang penelitian simulasi jaringan komputer!</p>
                <a href="../public/cisco.html" class="btn">read more</a>
+               <div class="icons">
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
+                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+               </div>
+            </div>
+         </div>
+
+         <div class="box">
+            <div class="image">
+               <img src="../images/MS-Excel.webp" alt="" style="border:1px solid #0eb582; border-bottom: none;">
+               <h3>Excel</h3>
+            </div>
+            <div class="content">
+               <h3>choose what's best for you!</h3>
+               <p>Microsoft Excel adalah sebuah aplikasi yang digunakan untuk mengolah sebuah data dengan otomatis
+                  melalui berbagai bentuk seperti rumus, perhitungan dasar, pengolahan data, pembuatan tabel, pembuatan
+                  grafik hingga manajemen data.</p>
+               <a href="../public/excel.html" class="btn">read more</a>
                <div class="icons">
                   <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
@@ -151,24 +194,6 @@
                   Source. Oleh karena itu, Linux termasuk sistem operasi open source dan pertama kali dikembangkan oleh
                   Linus Torvalds.</p>
                <a href="#" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
-               </div>
-            </div>
-         </div>
-
-         <div class="box">
-            <div class="image">
-               <img src="../images/MS-Excel.webp" alt="" style="border:1px solid #0eb582; border-bottom: none;">
-               <h3>Excel</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Microsoft Excel adalah sebuah aplikasi yang digunakan untuk mengolah sebuah data dengan otomatis
-                  melalui berbagai bentuk seperti rumus, perhitungan dasar, pengolahan data, pembuatan tabel, pembuatan
-                  grafik hingga manajemen data.</p>
-               <a href="../public/excel.html" class="btn">read more</a>
                <div class="icons">
                   <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
@@ -265,7 +290,7 @@
       <div class="box-container">
 
          <div class="box">
-            <h3> <i class="fas fa-lightbulb"></i> educa </h3>
+            <h3> <i class="fas fa-lightbulb"></i> NasWeb </h3>
             <p>NasWeb akan mmeberikan Edukasi kepada kalian semua tentang ilmu. Anjay 😎👊</p>
             <div class="share">
                <a href="https://m.facebook.com/ignasius.sigit.1" class="fab fa-facebook-f"></a>
@@ -303,7 +328,11 @@
 
       </div>
 
-      <div class="credit"> created by <span>Ignasius</span> | all rights reserved! </div>
+
+      <div class="credit"> di buat dengan <i class="fas fa-heart" style="color: red;"></i> oleh <span>Ignasius</span>
+         <br>
+         &copy; NasWeb 2022
+      </div>
 
    </section>
 
