--- a/public/vlan1.html
+++ b/public/vlan1.html
@@ -1,3 +1,28 @@
+<!-- =====================================================================================================
+========================== Halooo !!! ngintip aja nih ============================================
+==========================================================================================================
+
+NYARI APA NIH? HEHE... I CAN SEE YOU
+SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIAT INI !
+
+                                                                                            
+     :::       .:.                                   ::          .:.                  .&@~          
+    .@@@#      P@#                                  ^@@:         B@Y                  .@@!          
+    .@@#@#     P@#     ..^~~~^.          .:~~~~~:   .@@^         &@7      .~~~:       .@@~  :~~:    
+    .@@^5@#    P@#    !@&BGGB&@&!      !#@#GGGB#J    &@7   ..    @@^   .5@&BGB&@B^    .@@JP@&&&@@P  
+    .@@^ G@B   P@#     .      ?@@^    ~@@~           #@Y  :@@?  .@@.  :@@7     !@@~   .@@@B^   :@@G 
+    .@@^  B@G  P@#       :^~~^7@@!    .&@&Y~.        G@P  #@@@: :@@   #@&^^~~~^^&@#   .@@J      7@@:
+    .@@^   #@P 5@#    7#@&BBBB#@@!      ~5#&@@&P^    J@B J@7~@# ^@#   @@&GBBBBBBGBY   .@@~      ^@@^
+    .@@^    #@JP@#   ?@@!     .@@!          .^P@@7   !@&:@#  G@Y!@G   #@#             .@@~      Y@&.
+    .@@^     &@@@#   J@@~   .?&@@!    ..      !@@!   :@@&@.   &@&@5   :@@B^     ..    .@@?    .Y@@^ 
+    .&&^     .#@&G    ?&@&###P^B@^    J@&&###&&P^    .&&@7    ^&@@!     J#&&&###&B     G&&&&#&&#?   
+                         ...            .....                              ....           ....      
+
+==========================================================================================================
+==========================================================================================================
+=======================================================================================================-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -418,7 +443,11 @@
 
         </div>
 
-        <div class="credit"> created by <span>Ignasius</span> | all rights reserved! </div>
+
+        <div class="credit"> di buat dengan <i class="fas fa-heart" style="color: red;"></i> oleh <span>Ignasius</span>
+            <br>
+            &copy; NasWeb 2022
+        </div>
 
     </section>
 
