--- a/public/contact.html
+++ b/public/contact.html
@@ -1,3 +1,28 @@
+<!-- =====================================================================================================
+========================== Halooo !!! ngintip aja nih ============================================
+==========================================================================================================
+
+NYARI APA NIH? HEHE... I CAN SEE YOU
+SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIAT INI !
+
+                                                                                            
+     :::       .:.                                   ::          .:.                  .&@~          
+    .@@@#      P@#                                  ^@@:         B@Y                  .@@!          
+    .@@#@#     P@#     ..^~~~^.          .:~~~~~:   .@@^         &@7      .~~~:       .@@~  :~~:    
+    .@@^5@#    P@#    !@&BGGB&@&!      !#@#GGGB#J    &@7   ..    @@^   .5@&BGB&@B^    .@@JP@&&&@@P  
+    .@@^ G@B   P@#     .      ?@@^    ~@@~           #@Y  :@@?  .@@.  :@@7     !@@~   .@@@B^   :@@G 
+    .@@^  B@G  P@#       :^~~^7@@!    .&@&Y~.        G@P  #@@@: :@@   #@&^^~~~^^&@#   .@@J      7@@:
+    .@@^   #@P 5@#    7#@&BBBB#@@!      ~5#&@@&P^    J@B J@7~@# ^@#   @@&GBBBBBBGBY   .@@~      ^@@^
+    .@@^    #@JP@#   ?@@!     .@@!          .^P@@7   !@&:@#  G@Y!@G   #@#             .@@~      Y@&.
+    .@@^     &@@@#   J@@~   .?&@@!    ..      !@@!   :@@&@.   &@&@5   :@@B^     ..    .@@?    .Y@@^ 
+    .&&^     .#@&G    ?&@&###P^B@^    J@&&###&&P^    .&&@7    ^&@@!     J#&&&###&B     G&&&&#&&#?   
+                         ...            .....                              ....           ....      
+
+==========================================================================================================
+==========================================================================================================
+=======================================================================================================-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -95,7 +120,7 @@
          <div class="icons">
             <i class="fas fa-phone"></i>
             <h3>phone :</h3>
-            <p>+62-896-5711-4021</p>
+            <p><a href="https://api.whatsapp.com/send?phone=6289657114021">+62-896-5711-4021</a></p>
          </div>
 
          <div class="icons">
@@ -165,7 +190,7 @@
       <div class="box-container">
 
          <div class="box">
-            <h3> <i class="fas fa-lightbulb"></i> educa </h3>
+            <h3> <i class="fas fa-lightbulb"></i> NasWeb </h3>
             <p>NasWeb akan mmeberikan Edukasi kepada kalian semua tentang ilmu. Anjay 😎👊</p>
             <div class="share">
                <a href="https://m.facebook.com/ignasius.sigit.1" class="fab fa-facebook-f"></a>
@@ -203,7 +228,11 @@
 
       </div>
 
-      <div class="credit"> created by <span>Ignasius</span> | all rights reserved! </div>
+
+      <div class="credit"> di buat dengan <i class="fas fa-heart" style="color: red;"></i> oleh <span>Ignasius</span>
+         <br>
+         &copy; NasWeb 2022
+      </div>
 
    </section>
 
