mengubah pada body

--- a/home.html
+++ b/home.html
@@ -328,7 +328,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <div class="swiper-slide slide">
                <p>Thanks untuk NaasWeb yang sudah membagikan ilmunya, semua videonya gampang di mengerti, Untuk
-                  Sekolah koding Keren dan Mantap</p>
+                  NasWeb Keren dan Mantap</p>
                <img src="images/kattameraka2.jpg" alt="">
                <h3>Dr.Dr.Ir.Mora Devent M.Pd</h3>
                <div class="stars">
