menambahkan javascript pada form

--- a/home.html
+++ b/home.html
@@ -166,6 +166,14 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
          </div>
 
          <div class="box">
+            <a href="./public/blog.html">
+               <img src="images/homeexcel.png" alt="">
+               <h3>Ms.Excel</h3>
+               <p>6 modules</p>
+            </a>
+         </div>
+
+         <div class="box">
             <img src="images/logolinux.png" alt="">
             <h3>Linux</h3>
             <p>3 modules</p>
@@ -174,7 +182,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
          <div class="box">
             <img src="images/cyber4.png" alt="">
             <h3>Cyber Scurity</h3>
-            <p>12 modules</p>
+            <p>10 modules</p>
          </div>
 
          <div class="box">
