--- a/public/1server.html
+++ b/public/1server.html
@@ -216,7 +216,8 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                 terimakasih.</p>
 
             <p> <a href="../public/cisco.html"> <button type="button"
-                        style="padding:10px; background-color: #0eb582; color: white; border-radius: 5px;">Back</button></a>
+                        style="padding:10px; background-color: #0eb582; color: white; border-radius: 5px;"><i
+                            class="fas fa-chevron-left"></i> Back</button></a>
             </p>
         </div>
 
