--- a/public/2router.html
+++ b/public/2router.html
@@ -335,16 +335,20 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                 Jika semua sudah di setting mulai dari ("pemberian IP", "setting DHCP", "setting IP route") langkah yang
                 paling <b><i>AKHIR</i></b> ia lah, kalian saling "PING" kan antar router seperti Dibawah : 👍👌
             </p>
-            <div class="image">
-                <img src="../images/pig 1.png" style="width: 35%;" alt="">
-                <small><i><b>Gambar 4.0</b></i></small>
-            </div>
-            <div class="image">
-                <img src="../images/pig 2.png" style="width: 35%; margin-top: 10px;" alt="">
-                <small><i><b>Gambar 5.0</b></i></small>
-            </div>
+            <table>
+                <tr>
+                    <td><img src="../images/pig 1.png" style="width: 50%;" alt="">
+                        <small><i><b>Gambar 4.0</b></i></small>
+                    </td>
+                    <td> <img src="../images/pig 2.png" style="width: 50%; margin-top: 10px;" alt="">
+                        <small><i><b>Gambar 5.0</b></i></small>
+                    </td>
+                </tr>
+            </table>
+
             <p> <a href="../public/cisco.html"> <button type="button"
-                        style="padding:10px; background-color: #0eb582; color: white; border-radius: 5px;">Back</button></a>
+                        style="padding:10px; background-color: #0eb582; color: white; border-radius: 5px;"><i
+                            class="fas fa-chevron-left"></i> Back</button></a>
             </p>
         </div>
 
