--- a/public/rumusexcel.html
+++ b/public/rumusexcel.html
@@ -269,9 +269,11 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                 </li>
             </ul>
             </p>
-
+            <p> <a href="../public/excel.html"> <button type="button"
+                        style="padding:10px; background-color: #0eb582; color: white; border-radius: 5px;">
+                        <i class="fas fa-chevron-left"></i> Back</button></a>
+            </p>
         </div>
-
     </section>
 
     <!-- about section ends -->
