--- a/public/contact.html
+++ b/public/contact.html
@@ -39,6 +39,11 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
    <!-- swiper css link  -->
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
+   <!-- Link Bootstrap -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
    <!-- custom css file link  -->
    <link rel="stylesheet" href="../css/style.css">
 
@@ -144,15 +149,25 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
          </div>
 
          <form name="websiteku1">
+
+            <div class="alert alert-success alert-dismissible fade show my-alert d-none" role="alert"
+               style="font-size: 15px;">
+               <strong>Terimakasih</strong> pesan anda sudah kami terima.
+               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
             <h3>send us a message</h3>
             <input type="text" placeholder="name" class="box" name="nama">
             <input type="email" placeholder="email" class="box" name="email">
             <input type="number" placeholder="phone" class="box" name="telpon">
             <textarea name="pesan" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
-            <button type="submit" value="send message" class="btn">KIRIM</button>
+            <button type="submit" value="send message" class="btn btn-kirim">KIRIM</button>
+
+            <button class="btn btn-success btn-loading d-none" type="button" disabled>
+               <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+               Loading...
+            </button>
+
          </form>
-         <p style="text-align: center; color: red; font-size: 20px;">*Jika sudah pencet kirim 1x, anda sudah mengirimkan
-            pesan dan lalu refresh.*</p>
 
       </div>
 
@@ -166,11 +181,11 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
    <section class="logo-container">
       <div class="swiper logo-slider">
          <div class="swiper-wrapper">
-            <div class="swiper-slide"> <img src="images/partner-logo-1.png" alt=""> </div>
-            <div class="swiper-slide"> <img src="images/partner-logo-2.png" alt=""> </div>
-            <div class="swiper-slide"> <img src="images/partner-logo-3.png" alt=""> </div>
-            <div class="swiper-slide"> <img src="images/partner-logo-4.png" alt=""> </div>
-            <div class="swiper-slide"> <img src="images/partner-logo-5.png" alt=""> </div>
+            <div class="swiper-slide"> <img src="../images/yadika_logo.png" alt=""> </div>
+            <div class="swiper-slide"> <img src="../images/logo_itb.png" alt=""> </div>
+            <div class="swiper-slide"> <img src="../images/logo-unpad.png" alt=""> </div>
+            <div class="swiper-slide"> <img src="../images/logo_binus.png" alt=""> </div>
+            <div class="swiper-slide"> <img src="../images/logo_harvard.png" alt=""> </div>
          </div>
       </div>
    </section>
@@ -245,19 +260,40 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
    <!-- swiper js link  -->
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
+   <!-- js link bootstrap -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+
    <!-- custom js file link  -->
    <script src="../js/script.js"></script>
 
    <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbytBhoDewEeXSFimSe0ncY_Knp7HPHFYnoBohu4tQdiLEp5sTkQILpnp9-JVL_0UclT/exec'
       const form = document.forms['websiteku1']
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert');
 
       form.addEventListener('submit', e => {
          e.preventDefault()
+         // ketika tombol submit di klik
+         // tampilkan tombol loading, hilangkan tombol submit
+         btnLoading.classList.toggle('d-none');
+         btnKirim.classList.toggle('d-none');
          fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-            .then(response => console.log('Success!', response))
-            .catch(error => console.error('Error!', error.message))
-      })
+            .then((response) => {
+               // tampilkan tombol kirim, hilangkan tombol loading
+               btnLoading.classList.toggle('d-none');
+               btnKirim.classList.toggle('d-none');
+               // tampilkan alert
+               myAlert.classList.toggle('d-none');
+               // reset formnya
+               form.reset();
+               console.log('Success!', response);
+            })
+            .catch((error) => console.error('Error!', error.message))
+      });
    </script>
 </body>
 
