meambahkan page mikrotik

--- a/public/cisco.html
+++ b/public/cisco.html
@@ -249,9 +249,9 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                     <i class="fas fa-angle-down"></i>
                 </div>
                 <p class="accordion-content">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
-                    laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
-                    voluptatibus deserunt quidem. Natus, quo.
+                    Cara mengkonfigurasi Mikrotik VLAN dengan menggunakan Software WinBox <br>
+                    <button type="button" style="background-color: #0eb582;; border-radius: 5px; padding: 10px;"><a
+                            href="./mikrotik_1.html" style="color: #fff;">Klik disini</a></button>
                 </p>
             </div>
 
