--- a/public/mikrotik_1.html
+++ b/public/mikrotik_1.html
@@ -227,7 +227,8 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                     <p>Pergi ke menu Interface</p> <br>
                     <div class="container">
                         <div class="image-container">
-                            <div class="image"><img src="../images/interface winbox.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/interface winbox.png" alt="" style="width: 100%;">
+                            </div> <br>
                             <small><i><b>Gambar 3.0</b></i></small>
                         </div>
                     </div>
@@ -256,7 +257,8 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                     <br>
                     <div class="container">
                         <div class="image-container">
-                            <div class="image"><img src="../images/interface 1 winbox.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/interface 1 winbox.png" alt="" style="width: 100%;">
+                            </div> <br>
                             <small><i><b>Gambar 4.0</b></i></small>
                         </div>
                     </div>
@@ -275,22 +277,26 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                         ISP <br>
                     <div class="container">
                         <div class="image-container">
-                            <div class="image"><img src="../images/interface2 mikrotik.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/interface2 mikrotik.png" alt="" style="width: 100%;">
+                            </div> <br>
                             <small><i><b>Gambar 5.0</b></i></small>
                         </div>
                         <br>
                         <div class="image-container">
-                            <div class="image"><img src="../images/interface3 mikrotik.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/interface3 mikrotik.png" alt="" style="width: 100%;">
+                            </div> <br>
                             <small><i><b>Gambar 6.0</b></i></small>
                         </div>
                         <br>
                         <div class="image-container">
-                            <div class="image"><img src="../images/interface5 mikrotik.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/interface5 mikrotik.png" alt="" style="width: 100%;">
+                            </div> <br>
                             <small><i><b>Gambar 7.0</b></i></small>
                         </div>
                         <br>
                         <div class="image-container">
-                            <div class="image"><img src="../images/interface4 mikrotik.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/interface4 mikrotik.png" alt="" style="width: 100%;">
+                            </div> <br>
                             <small><i><b>Gambar 8.0 </b> <br>
                                     <p>Hasil IP Address</p>
                                 </i></small>
@@ -318,13 +324,13 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                         </li>
                     </ul>
                     <br>
-                    <div class="image-container" style="width: 80%;">
-                        <div class="image"><img src="../images/wireless1.png" alt=""></div>
+                    <div class="image-container">
+                        <div class="image"><img src="../images/wireless1.png" alt="" style="width: 100%;"></div>
                         <small><i><b>Gambar 9.0</b></i></small>
                     </div>
                     <br>
-                    <div class="image-container" style="width: 80%;">
-                        <div class="image"><img src="../images/wireless 2.png" alt=""></div>
+                    <div class="image-container">
+                        <div class="image"><img src="../images/wireless 2.png" alt="" style="width: 100%;"></div>
                         <small><i><b>Gambar 10.1</b></i></small>
                     </div>
                     </p>
@@ -339,15 +345,17 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                         dengan "Default ISP " kalian. disini default ISP saya (192.1.1) klik Apply lalu OK
                         <br>
                     <div class="container">
-                        <div class="image-container" style="width: 80%;">
-                            <div class="image"><img src="../images/ip routes.png" alt=""></div> <br>
+                        <div class="image-container">
+                            <div class="image"><img src="../images/ip routes.png" alt="" style="width: 100%;"></div>
+                            <br>
                             <small><i><b>Gambar 10.2</b></i></small>
                         </div>
                     </div>
                     <br>
                     <div class="container">
-                        <div class="image-container" style="width: 80%;">
-                            <div class="image"><img src="../images/ip routes1.png" alt=""></div> <br>
+                        <div class="image-container">
+                            <div class="image"><img src="../images/ip routes1.png" alt="" style="width: 100%;"></div>
+                            <br>
                             <small><i><b>Gambar 10.3</b></i></small>
                         </div>
                     </div>
@@ -378,28 +386,32 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                         <br>
                     <div class="container">
                         <div class="image-container">
-                            <div class="image"><img src="../images/firewall-nat1.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/firewall-nat1.png" alt="" style="width: 100%;"></div>
+                            <br>
                             <small><i><b>Gambar 10.4</b></i></small>
                         </div>
                     </div>
                     <br>
                     <div class="container">
                         <div class="image-container">
-                            <div class="image"><img src="../images/firewall-nat2.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/firewall-nat2.png" alt="" style="width: 100%;"></div>
+                            <br>
                             <small><i><b>Gambar 10.5</b></i></small>
                         </div>
                     </div>
                     <br>
                     <div class="container">
                         <div class="image-container">
-                            <div class="image"><img src="../images/firewall-nat3.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/firewall-nat3.png" alt="" style="width: 100%;"></div>
+                            <br>
                             <small><i><b>Gambar 10.6</b></i></small>
                         </div>
                     </div>
                     <br>
                     <div class="container">
                         <div class="image-container">
-                            <div class="image"><img src="../images/hasil_firewall.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/hasil_firewall.png" alt="" style="width: 100%;">
+                            </div> <br>
                             <small><i><b>Gambar 10.7</b></i></small>
                         </div>
                     </div>
@@ -453,7 +465,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </h3>
             <br>
 
-            <h3 class="about-title">STEP YANG PERTAMA</h3>
+            <h3 class="about-title" style="font-size: 20px; margin-top: 30px;">STEP YANG PERTAMA</h3>
             <p class="teks">
             <ol>
                 <li>
@@ -465,7 +477,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </ol>
             </p>
 
-            <h3 class="about-title">STEP 2</h3>
+            <h3 class="about-title" style="font-size: 20px;">STEP 2</h3>
             <p class="teks">
             <ol>
                 <li>
@@ -481,7 +493,8 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                         <br>
                     <div class="container">
                         <div class="image-container">
-                            <div class="image"><img src="../images/bridge port.png" alt=""></div> <br>
+                            <div class="image"><img src="../images/bridge port.png" alt="" style="width: 100%;"></div>
+                            <br>
                             <small><i><b>Gambar 10.8</b></i></small>
                         </div>
                     </div>
@@ -496,7 +509,8 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                                 <br>
                             <div class="container">
                                 <div class="image-container">
-                                    <div class="image"><img src="../images/switxh1.png" alt=""></div> <br>
+                                    <div class="image"><img src="../images/switxh1.png" alt="" style="width: 100%;">
+                                    </div> <br>
                                     <small><i><b>Gambar 10.9</b></i></small>
                                 </div>
                             </div>
@@ -508,7 +522,8 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                                 <br>
                             <div class="container">
                                 <div class="image-container">
-                                    <div class="image"><img src="../images/switch2.png" alt=""></div> <br>
+                                    <div class="image"><img src="../images/switch2.png" alt="" style="width: 100%;">
+                                    </div> <br>
                                     <small><i><b>Gambar 11.0</b></i></small>
                                 </div>
                             </div>
@@ -544,21 +559,24 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                                 <br>
                             <div class="container">
                                 <div class="image-container">
-                                    <div class="image"><img src="../images/switchport1.png" alt=""></div> <br>
+                                    <div class="image"><img src="../images/switchport1.png" alt="" style="width: 100%;">
+                                    </div> <br>
                                     <small><i><b>Gambar 11.1</b></i></small>
                                 </div>
                             </div>
                             <br>
                             <div class="container">
                                 <div class="image-container">
-                                    <div class="image"><img src="../images/switchport2.png" alt=""></div> <br>
+                                    <div class="image"><img src="../images/switchport2.png" alt="" style="width: 100%;">
+                                    </div> <br>
                                     <small><i><b>Gambar 11.2</b></i></small>
                                 </div>
                             </div>
                             <br>
                             <div class="container">
                                 <div class="image-container">
-                                    <div class="image"><img src="../images/switchport3.png" alt=""></div> <br>
+                                    <div class="image"><img src="../images/switchport3.png" alt="" style="width: 100%;">
+                                    </div> <br>
                                     <small><i><b>Gambar 11.3</b></i></small>
                                 </div>
                             </div>
