--- a/public/mikrotik_1.html
+++ b/public/mikrotik_1.html
@@ -593,6 +593,14 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
         </div>
     </section>
 
+    <p class="back" style="padding: 20px;">
+        <a href="../public/cisco.html">
+            <button type="button"
+                style="padding:15px; background-color: #0eb582; color: white; border-radius: 5px; font-size: 14px;">
+                <i class="fas fa-chevron-left"> Back</i>
+            </button>
+        </a>
+    </p>
 
 
     <!-- about section ends -->
