--- a/public/videocisco.html
+++ b/public/videocisco.html
@@ -39,6 +39,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
     <!-- swiper css link  -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
+    <!-- link bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!-- custom css file link  -->
     <link rel="stylesheet" href="../css/style.css">
 
@@ -105,9 +109,14 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
     <!-- header section ends -->
 
     <!-- video starts -->
-    <div class="area" style="padding: 5px;">
-        <p style="text-align: center; color: white; font-size: 16px; background-color: salmon; ">*jika
-            soundnya menggangu silahkan di Mute :v*</p>
+    <div class="atas" style="padding: 15px;">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert"
+            style="padding: 10px; border-radius: 15px;">
+            <p style="text-align: center; font-size: 15px;"> <strong>Jika sound nya Mengganggu Silahkan Di Mute
+                    :v</strong>
+            </p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
     </div>
 
     <div class="container1">
@@ -244,6 +253,11 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
     <!-- swiper js link  -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
     <!-- custom js file link  -->
     <script src="../js/video.js"></script>
