--- a/public/cisco.html
+++ b/public/cisco.html
@@ -255,6 +255,18 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                 </p>
             </div>
 
+            <div class="accordion">
+                <div class="accordion-heading">
+                    <h3>Cara CHEAT QUIZIZZ</h3>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                <p class="accordion-content">
+                    Cara mengetahui jawaban pada quizizz <br>
+                    <button type="button" style="background-color: #0eb582;; border-radius: 5px; padding: 10px;"><a
+                            href="./cheatQuizizz.html" style="color: #fff;">Klik disini</a></button>
+                </p>
+            </div>
+
         </div>
 
     </section>
