--- a/public/mikrotik_1.html
+++ b/public/mikrotik_1.html
@@ -31,7 +31,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mengenal rumus excel</title>
+    <title>Mikrotik</title>
 
     <link rel="icon" href="../images/linux-hero.png">
     <!-- font awesome cdn link  -->
